// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TransfersOfCareDetailForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="transfersOfCareDetailForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="from"
            label="From (Site / Org)"
            name="from"
            options={
              Array [
                Object {
                  "disabled": false,
                  "title": "Worcester Trust",
                  "value": "Worcester Trust",
                },
                Object {
                  "disabled": false,
                  "title": "Kings Hospital",
                  "value": "Kings Hospital",
                },
                Object {
                  "disabled": false,
                  "title": "Oxford NHS Trust",
                  "value": "Oxford NHS Trust",
                },
                Object {
                  "disabled": false,
                  "title": "St James' Hospital",
                  "value": "St James' Hospital",
                },
              ]
            }
            placeholder="-- Select from --"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="to"
            label="To (Site / Org)"
            name="to"
            options={
              Array [
                Object {
                  "disabled": false,
                  "title": "Worcester Trust",
                  "value": "Worcester Trust",
                },
                Object {
                  "disabled": false,
                  "title": "Kings Hospital",
                  "value": "Kings Hospital",
                },
                Object {
                  "disabled": false,
                  "title": "Oxford NHS Trust",
                  "value": "Oxford NHS Trust",
                },
                Object {
                  "disabled": false,
                  "title": "St James' Hospital",
                  "value": "St James' Hospital",
                },
              ]
            }
            placeholder="-- Select to --"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="transferDateTime"
        label="Date of Transfer"
        name="transferDateTime"
        props={
          Object {
            "format": "DD-MMM-YYYY HH:mm",
            "isSubmit": true,
            "minDate": "2018-01-01T00:00:00.000Z",
            "showTimeSelect": true,
            "timeFormat": "HH:mm",
            "timeIntervals": 5,
          }
        }
        showTimeSelect={true}
      />
      <Field
        component={[Function]}
        id="records"
        name="records"
        props={
          Object {
            "isSubmit": true,
            "match": undefined,
            "typesOptions": Array [
              Object {
                "title": "Problems / Diagnosis",
                "value": "diagnosis",
              },
              Object {
                "title": "Medications",
                "value": "medications",
              },
              Object {
                "title": "Referrals",
                "value": "referrals",
              },
              Object {
                "title": "Events",
                "value": "events",
              },
              Object {
                "title": "Vitals",
                "value": "vitals",
              },
            ],
          }
        }
      />
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="reasonForContact"
            label="Reason for contact"
            name="reasonForContact"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="clinicalSummary"
            label="Clinical Summary"
            name="clinicalSummary"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="dateCreated"
        label="Date"
        name="dateCreated"
        props={
          Object {
            "disabled": true,
            "format": "DD-MMM-YYYY",
            "isSubmit": true,
            "value": undefined,
          }
        }
      />
    </div>
  </form>
</div>
`;

exports[`Component <TransfersOfCareDetailForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="transfersOfCareDetailForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="from"
            label="From (Site / Org)"
            name="from"
            options={
              Array [
                Object {
                  "disabled": false,
                  "title": "Worcester Trust",
                  "value": "Worcester Trust",
                },
                Object {
                  "disabled": false,
                  "title": "Kings Hospital",
                  "value": "Kings Hospital",
                },
                Object {
                  "disabled": false,
                  "title": "Oxford NHS Trust",
                  "value": "Oxford NHS Trust",
                },
                Object {
                  "disabled": false,
                  "title": "St James' Hospital",
                  "value": "St James' Hospital",
                },
              ]
            }
            placeholder="-- Select from --"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="to"
            label="To (Site / Org)"
            name="to"
            options={
              Array [
                Object {
                  "disabled": false,
                  "title": "Worcester Trust",
                  "value": "Worcester Trust",
                },
                Object {
                  "disabled": false,
                  "title": "Kings Hospital",
                  "value": "Kings Hospital",
                },
                Object {
                  "disabled": false,
                  "title": "Oxford NHS Trust",
                  "value": "Oxford NHS Trust",
                },
                Object {
                  "disabled": false,
                  "title": "St James' Hospital",
                  "value": "St James' Hospital",
                },
              ]
            }
            placeholder="-- Select to --"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="transferDateTime"
        label="Date of Transfer"
        name="transferDateTime"
        props={
          Object {
            "format": "DD-MMM-YYYY HH:mm",
            "isSubmit": false,
            "minDate": "2018-01-01T00:00:00.000Z",
            "showTimeSelect": true,
            "timeFormat": "HH:mm",
            "timeIntervals": 5,
          }
        }
        showTimeSelect={true}
      />
      <Field
        component={[Function]}
        id="records"
        name="records"
        props={
          Object {
            "isSubmit": false,
            "match": undefined,
            "typesOptions": Array [
              Object {
                "title": "Problems / Diagnosis",
                "value": "diagnosis",
              },
              Object {
                "title": "Medications",
                "value": "medications",
              },
              Object {
                "title": "Referrals",
                "value": "referrals",
              },
              Object {
                "title": "Events",
                "value": "events",
              },
              Object {
                "title": "Vitals",
                "value": "vitals",
              },
            ],
          }
        }
      />
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="reasonForContact"
            label="Reason for contact"
            name="reasonForContact"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="clinicalSummary"
            label="Clinical Summary"
            name="clinicalSummary"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="dateCreated"
        label="Date"
        name="dateCreated"
        props={
          Object {
            "disabled": true,
            "format": "DD-MMM-YYYY",
            "isSubmit": false,
            "value": undefined,
          }
        }
      />
    </div>
  </form>
</div>
`;
